--- a/my_site/styles/style_new.css
+++ b/my_site/styles/style_new.css
@@ -4,7 +4,7 @@ body {
 
 header {
     border: 0px solid;
-    background: black;
+    background: rgb(0, 0, 0);
     position: fixed;
     width: 100%;
     height: 60px;
