--- a/my_site/styles/test.css
+++ b/my_site/styles/test.css
@@ -49,7 +49,7 @@ A {
 
 .content {
     display: flex;
-    border: 0px solid black;
+    border: 2px solid black;
     margin-top: 100px;
     justify-content: space-around;
 
@@ -125,6 +125,7 @@ A {
     border: 0px solid white;
     background-color: #ffffff;
     box-shadow: 15px 15px #000000;
+    border: 0px solid black;
 }
 
 .about_style {
@@ -152,9 +153,8 @@ A {
 }
 
 .content_2 {
-    left: 0px;
     display: flex;
-    border: 0px solid #000000;
+    border: 2px solid black;
     margin-top: 100px;
     justify-content: space-evenly;
 }
@@ -163,100 +163,24 @@ A {
     display: flex;
     flex-wrap: wrap;
     width: 23%;
-    border: 0px solid #ffffff;
+    background-color: #e9f1f5;
+    border: 1px solid black;
     justify-content: space-evenly;
-    padding: 10px;
-}
+ }
 
 .img1 {
     width: 90%;
     height: 240px;
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 0px;
-    background-color: #000000;
-    border: 0px solid #ffffff;
+    margin: 10px;
+    background-color: #ffffff;
+    border: 1px solid black;
 }
 
 .text1 {
     width: 90%;
-    height: 250px;
-    margin-left: 20px;
-    margin-right: 20px;
-    background-color: #000000;
-    border: 0px solid #ffffff;
-}
-
-.cat1 {
-    width: 100%;
-    height: 260px;
-}
-.cat1_text {
-    color: white;
-    padding: 10px;
-    font-size: 22px;
-    padding-top: 2px;
-}
-.content_3 {
-    display: grid;
-    margin: 40px;
-    padding: 10px;
+    height: 130px;
+    margin: 10px;
+    background-color: #ffffff;
     border: 1px solid black;
-    grid-template-rows: 600px 600px;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 30px;
-    grid-row-gap: 30px;
-    grid-template-areas:
-            'up up2'
-            'down down2';
 }
 
-.one_gr {
-    display: grid;
-    background-color: #aea4e3;
-    grid-area: up;
-}
-.one_gr_1 {
-    height: 300px;
-    width: 760px;
-    background-color: #eaea77;
-
-}
-.one_gr_2 {
-    background-color: #7409c7;
-    height: 300px;
-    width: 760px;
-
-}
-
-.flow1 {
-    width: 350px;
-    height: 300px;
-    padding-left: 210px;
-    padding-top: 5px;
-}
-
-.flow_text {
-    width: 200px;
-    height: 100px;
-    background-color: black;
-    text-align: center;
-    color: white;
-
-}
-
-.two_gr {
-    background-color: #eaea77;
-    grid-area: up2;
-}
-
-.three_gr {
-    background-color: #d3ffe8;
-    grid-area: down;
-}
-
-.four_gr {
-    background-color: #7409c7;
-    grid-area: down2;
-}
