--- a/my_site/styles/test.css
+++ b/my_site/styles/test.css
@@ -1,186 +1,62 @@
 body {
     background: linear-gradient(90deg, #ddb35f, #7409c7);
 }
-
-header {
-    display: flex;
-    border: 0px solid black;
-    position: fixed;
+div{
+    height: 50px;
     width: 100%;
-    height: 60px;
-    background-color: black;
-    top: 0;
-    left: 0;
-}
-
-h1 {
-    text-align: left;
-    color: white;
-    font-family: Impact;
-    margin: 0 auto;
-    margin-top: 13px;
-    margin-left: 20px;
-}
-
-.linktable {
-    padding-right: 100px;
-    text-align: right;
-    color: white;
-    font-family: Impact;
-    font-size: 18px;
-}
-
-.arrow {
-    position: relative;
-    top: -60px;
-    float: right;
-}
-A {
-    text-decoration: none;
-    color: black;
-}
-
-
-.logo {
-    padding-left: 20px;
-    padding-top: 0px;
-    float: left;
-}
-
-.content {
-    display: flex;
-    border: 2px solid black;
-    margin-top: 100px;
-    justify-content: space-around;
-
-}
-
-.block1 {
-    width: 30%;
-    height: 700px;
-    border: 0px solid black;
-}
-.ava {
-    width: 400px;
-    height: 400px;
-    border: 0px solid black;
-    margin-left: 95px;
-    margin-top: 50px;
-}
-.ava_style {
-    width: 90%;
-    border-radius: 40px;
-    box-shadow: 15px 15px #000000;
-}
-
-.block2 {
-    display: flex;
-    flex-wrap: wrap;
-    width: 70%;
-    height: 700px;
-    border: 0px solid black;
-}
-
-.name {
-    width: 100%;
-    height: 120px;
-    border: 0px solid black;
-}
-
-.name1 {
-    margin-left: 25%;
-    margin-top: -13px;
-    width: 600px;
-    height: 100px;
-    border: 0px solid #000000;
-    background-color: #ffffff;
-    box-shadow:
-            0 0 0 1px rgb(194, 192, 184) inset,
-            0 5px 0 -4px rgb(255, 255, 255),
-            0 5px 0 -3px rgb(194, 192, 184),
-            0 11px 0 -8px rgb(255, 255, 255),
-            0 11px 0 -7px rgb(194, 192, 184),
-            0 17px 0 -12px rgb(255, 255, 255),
-            0 17px 0 -11px rgb(194, 192, 184);
-}
-
-.name_style {
+    /*	background-color: aqua;*/
+    margin-top: 10px;
     text-align: center;
-    padding-top: 25px;
-    font-size: 40px;
-    font-family: Broadway;
-    font-weight: lighter;
+}
+.one, .one_new{
+    background: #8ec9d8;
+}
+.two{
+    background-color: yellow;
+}
+.three{
+    background-color: LightPink;
+}
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 10px;
+}
+/*.one_new{*/
+/*	grid-column: 1/3;*/
+/*}*/
+/*.two{*/
+/*	grid-column: 3/6;*/
+/*}*/
+/*max-width: [00..350]*/
+/*min-width:[700...+]*/
+
+@media screen and (max-width: 350px) {
+    .grid {
+        grid-template-columns: 1fr;
+        grid-column-gap: 15px;
+    }
+    .one_new {
+        background-color: red;
+    }
 }
 
-.about {
-    height: 580px;
-    width: 50%;
+@media screen and (min-width: 350px) and (max-width: 700px) {
+    .grid {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-column-gap: 15px;
+    }
+    .one_new, .two, .three, .one {
+        background-color: #7409c7;
+    }
 }
 
-.about1 {
-    margin-top: 60px;
-    margin-left: 80px;
-    width: 450px;
-    height: 460px;
-    border: 0px solid white;
-    background-color: #ffffff;
-    box-shadow: 15px 15px #000000;
-    border: 0px solid black;
+@media screen and (min-width: 700px) {
+    .grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 15px;
+    }
+    div:nth-child (even) {
+        background-color: blue;
+    }
 }
-
-.about_style {
-    font-size: 24px;
-    padding: 25px;
-
-}
-.study {
-    height: 580px;
-    width: 50%;
-}
-.study1 {
-    margin-left: 80px;
-    margin-top: 120px;
-    width: 370px;
-    height: 420px;
-    border: 0px solid white;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 15px 15px #000000;
-}
-
-.study_style {
-    font-size: 24px;
-    padding: 25px;
-}
-
-.content_2 {
-    display: flex;
-    border: 2px solid black;
-    margin-top: 100px;
-    justify-content: space-evenly;
-}
-
-.box1 {
-    display: flex;
-    flex-wrap: wrap;
-    width: 23%;
-    background-color: #e9f1f5;
-    border: 1px solid black;
-    justify-content: space-evenly;
- }
-
-.img1 {
-    width: 90%;
-    height: 240px;
-    margin: 10px;
-    background-color: #ffffff;
-    border: 1px solid black;
-}
-
-.text1 {
-    width: 90%;
-    height: 130px;
-    margin: 10px;
-    background-color: #ffffff;
-    border: 1px solid black;
-}
-
